<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".About" >

    <TextView
        android:id="@+id/txt_hrsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Empty"
        android:layout_below="@+id/Empty"
        android:text="@string/aboutApp1"
        android:textColor="#000000"
        android:textSize="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_hrsName"
        android:layout_below="@+id/txt_hrsName"
        android:text="@string/aboutApp2"
        android:textColor="#000000"
        android:textSize="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/aboutApp4"
        android:textSize="@dimen/activity_horizontal_margin" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="17dp"
        android:text="@string/aboutApp6"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/imageViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@+id/textView10"
        android:src="@drawable/index"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignTop="@+id/imageViewAbout"
        android:layout_marginRight="21dp"
        android:layout_marginTop="10dp"
        android:text="@string/aboutAppName"
        android:textColor="#000000"
        android:textSize="@dimen/aboutApp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/imageViewAbout"
        android:layout_marginTop="66dp"
        android:text="@string/aboutApp3"
        android:textSize="@dimen/otherDem1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageViewAbout"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="77dp"
        android:text="@string/aboutApp5"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/aboutApp8"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/aboutApp10"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/aboutApp9"
        android:textColor="#000000"
        android:textSize="@dimen/otherDem1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/textView10"
        android:ems="10"
        android:text="@string/aboutApp7"
        tools:ignore="TextFields" >

        <requestFocus />
    </EditText>

</RelativeLayout>